[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/dialogic/Editor/Common/SectionTitle.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/dialogic/Editor/Common/TLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/dialogic/Editor/SettingsEditor/Scenes/TranslationIDSettings.gd" type="Script" id=3]
[ext_resource path="res://addons/dialogic/Editor/SettingsEditor/Scenes/SettingsCheckbox.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.252, 0.2718, 0.3246, 1 )

[node name="TranslationIdSettings" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="SectionTitle" parent="." instance=ExtResource( 1 )]
margin_right = 1024.0
custom_styles/normal = SubResource( 1 )
text = "Translation By Id Settings"
text_key = "Translation settings"

[node name="TranslationIdBox" type="HBoxContainer" parent="."]
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 50.0

[node name="SettingsCheckbox" parent="TranslationIdBox" instance=ExtResource( 4 )]
margin_right = 1024.0
margin_bottom = 24.0
text = "Enable Translations by Id"
settings_section = "translations"
settings_key = "translations_by_id"

[node name="GridContainer" type="GridContainer" parent="."]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 54.0
columns = 2

[node name="TLabel7" parent="GridContainer" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 155.0
margin_bottom = 19.0
mouse_filter = 0
text = "Override Default Locale:"
text_key = "Override Default Locale:"

[node name="LineEdit" type="LineEdit" parent="GridContainer"]
visible = false
margin_left = 159.0
margin_right = 217.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="TLabel8" parent="GridContainer" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 33.0
margin_right = 155.0
margin_bottom = 47.0
mouse_filter = 0
text = "CSV path:"
text_key = "CSV path:"

[node name="LineEdit2" type="LineEdit" parent="GridContainer"]
visible = false
margin_left = 159.0
margin_top = 28.0
margin_right = 217.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "res://dialogic/translation/dialogic_localization.csv"

[node name="CollectButton" type="Button" parent="GridContainer"]
visible = false
margin_top = 56.0
margin_right = 155.0
margin_bottom = 76.0
text = "Create Translation File"
